# azure-ai-search-skill-explorer

./: .env.example  README.md  main.py  main_window.py  pyproject.toml
.github/: copilot-instructions.md
controller/: ai_search_control.py  app_control.py  app_controller.py  blob_control.py  search_client.py  skill_preview.py  skill_tester.py
parse/: baseparser.py  markitdown_parser.py
skill/: __init__.py  baseskill.py  document_skills.py  embedding_skills.py  image_skills.py  sample_data.py  text_skills.py  utility_skills.py
