[project]
name = "azure-ai-search-skill-explorer"
version = "0.1.0"
description = "Preview Azure AI Search built-in skill outputs"
authors = [
    {name = "kimtth"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "azure-search-documents (>=11.6.0,<12.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
